fixed top banner spacing

--- a/css/basic-layout.scss
+++ b/css/basic-layout.scss
@@ -135,7 +135,9 @@
     padding: 20px 0;
   }
 
-  p { padding: 3px;}
+  p {
+    margin: 0;
+  }
   span {  padding: 3px;}
 }
 
