--- a/css/home-page.scss
+++ b/css/home-page.scss
@@ -12,6 +12,8 @@
     h2 {
       font-size: 34px;
       font-weight: bold;
+      margin: 0 auto 10px auto;
+      width: 50%;
     }
 
     p {
